Address the code-review findings in REVIEW.md
Correctness
- H1: a cached token reported its lifetime reconstructed from the staleness
  deadline, over-reporting it for short-lived tokens (expires_in 40 -> reported
  70 for a token dying in 30). The cache now stores the real expiry.
- H2: findAgreements() fetched one hard-wired page of 100 and the facade
  filtered it client-side, so a participant on agreement 120 of 150 read as
  having no contracts. It now pages to exhaustion, bounded and logged.
- H3: ids were concatenated into the outbound TM Forum path, allowing query
  and fragment injection and ../ segments. UriBuilder.path() does NOT encode
  these (verified), so every dynamic segment is percent-encoded explicitly,
  and ProviderScopedId.decode rejects such ids at the edge with 400.
- H4: the lenient base64 decode mangled any alphanumeric slug whose length is
  a multiple of four. This cannot be sniffed, so the documented contract is
  enforced: base64 (standard or URL-safe) required, anything else 400.
- H5+H6: the repository cache was keyed on the provider key, so PUT /providers
  answered 200 while requests kept hitting the old backend; and the registry
  snapshot never refreshed across replicas. Now keyed on the resolved
  ProviderConfig with an eviction hook, plus a scheduled refresh.
- M9: status mapping now lower-cases with Locale.ROOT.

Robustness and operations
- M1: connect/request timeouts on the OID4VP client and every exchange; the
  blocking exchange no longer runs inside the cache monitor.
- M2: one shared Oid4VpTokenCache for both token paths, so an outbound call no
  longer costs an unauthorized round trip plus a full presentation each time.
  Fixes a latent bug: bearerAuth appends, so a retry sent two headers.
- M3: the exception/ package the README promised - backend failure 502 with
  the downstream status and body kept out, bad id 400, unmodelled 500.
- M4: micrometer/prometheus added; /prometheus verified serving (was 404).
- M6: the adm